<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/background"
    tools:context=".ui.customword.CustomWordFragment">

    <ImageView
        android:id="@+id/iw_back"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:layout_marginStart="@dimen/padding_medium"
        android:contentDescription="Back"
        android:padding="@dimen/padding_small"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/tw_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tw_title"
        app:tint="@color/text_color" />

    <TextView
        android:id="@+id/tw_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center"
        android:padding="@dimen/padding_medium"
        android:text="@string/add_word"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size_extra_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:padding="@dimen/padding_medium"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/elevation_small"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_medium">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/turkish_word">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTurkishWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/english_word">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEnglishWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/upload_image"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivSelectedImage"
                android:layout_width="@dimen/selected_image_width"
                android:layout_height="@dimen/selected_image_height"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_small"
                android:contentDescription="@string/selected_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_words" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSelectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/button_background"
                android:text="@string/select_image" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:background="@drawable/button_background"
        android:elevation="@dimen/elevation_small"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


