<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/background"
    tools:context=".ui.detail.WordDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_medium">

        <ImageView
            android:id="@+id/iw_back"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:contentDescription="@string/back"
            android:padding="@dimen/padding_small"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/text_color" />

        <TextView
            android:id="@+id/tw_selected_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_small"
            android:text="@string/word"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_extra_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/iw_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iw_save_word"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:contentDescription="@string/bookmark"
            android:padding="@dimen/padding_small"
            android:src="@drawable/ic_bookmark_add_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/text_color" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_selected_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:elevation="@dimen/elevation_small"
            app:cardCornerRadius="@dimen/radius_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tw_selected_word">

            <ImageView
                android:id="@+id/iv_selected_word"
                android:layout_width="@dimen/word_image_width"
                android:layout_height="@dimen/word_image_height"
                android:contentDescription="@string/selected_word_image"
                android:padding="@dimen/padding_medium"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_apple" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tw_selected_turkish_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="@dimen/padding_small"
            android:text="@string/turkish_word"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_selected_word" />

        <View
            android:id="@+id/view_separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:layout_marginTop="@dimen/margin_small"
            android:alpha="0.3"
            android:background="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tw_selected_turkish_word" />

        <TextView
            android:id="@+id/tw_usage_examples_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/usage_examples"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_separator" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rw_usageExample"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tw_usage_examples_title"
            tools:listitem="@layout/item_layout_example" />

        <TextView
            android:id="@+id/tw_other_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/meanings_of_sentences"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rw_usageExample" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rw_meaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tw_other_languages"
            tools:listitem="@layout/item_turkish_layout" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_learned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:background="@drawable/button_background"
            android:src="@drawable/baseline_add_24"
            android:text="@string/learned"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rw_meaning" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
